# rofloCraft

./: .gitignore  CMakeLists.txt
core/: constants.h
core/classes/: World.hpp
core/classes/bodies/realize/: Cube.hpp
core/classes/camera/: Camera.hpp
core/classes/entities/: Player.hpp
core/classes/world/: Grid.hpp  World.hpp
core/utils/: shader_utils.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: main.cpp
src/classes/: World.cpp
src/classes/bodies/realize/: Cube.cpp
src/classes/camera/: Camera.cpp
src/classes/entities/: Player.cpp
src/classes/world/: Grid.cpp  World.cpp
utils/: shader_utils.cpp
